Update .gitignore and README with testing instructions
- Enhanced .gitignore with Spring Boot and React exclusions
- Added comprehensive testing documentation to README
- Added frontend/package-lock.json to track dependencies

Signed-off-by: Marek Forys <mforys73@gmail.com>